﻿0.6.6
=====

New Features:

  * Significant modifications to the parser to simplify the code and ensure
    that output is as close as possible to that of Mediawiki, including tag
    placement, newlines and whitespace.
  * Unit test coverage has been significantly improved.
  * Support added for definition lists of the form "; term : definition".
  * Utility added to Special:Maintenance to allow exporting internal database
    data to CSV.
  * Sub-headings in the table of contents should be of the form "1.1.1" to
    match Mediawiki.  Reported by Sil68.
  * Upgrade to Spring Framework 2.5.2.
  * Upgrade to commons-lang 2.4.

Bugfixes:

  * Unbalanced / unclosed HTML tags will now be automatically closed by the
    parser.  Originally reported by Michael Habbert.
  * Fix an issue that prevented error messages from being correctly reported on
    the Special:Maintenance page.
  * Resolve a problem that prevented __TOC__ tags within tables from being
    processed.  Reported by an anonymous user.
  * Wiki table captions now process table CSS such as |+align="bottom"|caption.
    Reported by an anonymous user.


0.6.5
=====

New Features:

  * Support added for Sybase ASA (dallas).
  * The spam filter will now also check descriptions for uploaded files in
    order to block spam from bots using this path.
  * Updated spam filter patterns.

Bugfixes:
  * Fix a problem that could cause HSQL to generate locking errors on context
    reload (dallas).
  * Resolve a problem that could cause database connection lockups during
    setup on MS SQL and some other databases.  Reported by multiple users, with
    significant debugging help provided by dallas.
  * Fix a regression that broke the Special:Manage page.  Bug reported with a
    suggested fix by tfschueller.
  * Fix a regression that broke the Special:Move page (dallas).
  * Resolve a logic error that prevented topics from being retrieved from the
    cache at appropriate times.  Pointed out by Jim.